layout/generic/nsFrame.cpp
@@ -4353,14 +4353,24 @@ nsIFrame::FinishAndStoreOverflow(nsRect* aOverflowArea, nsSize aNewSize)
                aOverflowArea->Contains(nsRect(nsPoint(0, 0), aNewSize)),
                "Computed overflow area must contain frame bounds");
 
+  PRBool geometricOverflow =
+    aOverflowArea->x < 0 || aOverflowArea->y < 0 ||
+    aOverflowArea->XMost() > aNewSize.width || aOverflowArea->YMost() > aNewSize.height;
+  // Clear geometric overflow area if we clip our children
+  NS_ASSERTION((GetStyleDisplay()->mOverflowY == NS_STYLE_OVERFLOW_CLIP) ==
+               (GetStyleDisplay()->mOverflowX == NS_STYLE_OVERFLOW_CLIP),
+               "If one overflow is clip, the other should be too");
+  if (geometricOverflow &&
+      GetStyleDisplay()->mOverflowX == NS_STYLE_OVERFLOW_CLIP) {
+    *aOverflowArea = nsRect(nsPoint(0, 0), aNewSize);
+    geometricOverflow = PR_FALSE;
+  }
+
   PRBool hasOutline;
   nsRect outlineRect(ComputeOutlineRect(this, &hasOutline, *aOverflowArea));
 
-  if (hasOutline ||
-      (aOverflowArea->x < 0) ||
-      (aOverflowArea->y < 0) ||
-      (aOverflowArea->XMost() > aNewSize.width) ||
-      (aOverflowArea->YMost() > aNewSize.height)) {
+  if (hasOutline || geometricOverflow) {
+    // Throw out any overflow if we're -moz-hidden-unscrollable
     mState |= NS_FRAME_OUTSIDE_CHILDREN;
     nsRect* overflowArea = GetOverflowAreaProperty(PR_TRUE); 
     NS_ASSERTION(overflowArea, "should have created rect");
